# apps/backend/src/endpoints/decision/DecisionService.ts
@@ -1,14 +1,31 @@
-import { Prisma } from "@prisma/client";
+import { DecodedIdToken } from "firebase-admin/auth";
+import { API } from "packages/api";
 import HttpException from "../../utils/HttpException";
 import { prisma } from "../../utils/Prisma";
 
-export async function findAllDecisionsByCompanyId(companyId: string) {
+export async function findAllDecisionsByCompanyId(
+	companyId: string,
+	requestingUser: DecodedIdToken
+): Promise<API.MadeDecision[]> {
+	let company;
 	try {
-		await prisma.company.findUnique({
+		company = await prisma.company.findUnique({
 			where: {
 				id: companyId,
 			},
+			include: {
+				users: true,
+			},
 		});
+	} catch (e) {
+		throw new HttpException(404, "Company not found");
+	}
+
+	if (company.users.find(user => user.userId === requestingUser.uid)) {
+		throw new HttpException(403, "You are not allowed to view this company");
+	}
+
+	try {
 		const foundDecisions = await prisma.madeDecision.findMany({
 			where: {
 				companyId: companyId,
@@ -18,65 +35,74 @@ export async function findAllDecisionsByCompanyId(companyId: string) {
 				decisionId: true,
 			},
 		});
-		if (Object.keys(foundDecisions).length == 0) {
-			throw new HttpException(404, "No decisions made for this company");
-		}
 		return foundDecisions;
 	} catch (e) {
-		throw new HttpException(e.status || 500, e.message);
+		return [];
 	}
 }
 
 export async function addDecisionToCompany(
 	companyId: string,
 	decisionId: string,
-	selectedPath: number
+	selectedPath: number,
+	requestingUser: DecodedIdToken
 ) {
+	let company;
 	try {
-		await prisma.company.findUnique({
+		company = await prisma.company.findUnique({
 			where: {
 				id: companyId,
 			},
-		});
-		const createdDecision = await prisma.madeDecision.create({
-			data: {
-				decisionId: decisionId,
-				companyId: companyId,
-				selectedPath: selectedPath,
+			include: {
+				users: true,
 			},
 		});
-		return createdDecision;
 	} catch (e) {
-		throw new HttpException(500, e.message);
+		throw new HttpException(404, "Company not found");
 	}
+
+	if (company.users.find(user => user.userId === requestingUser.uid)) {
+		throw new HttpException(403, "You are not allowed to view this company");
+	}
+
+	await prisma.madeDecision.create({
+		data: {
+			decisionId: decisionId,
+			companyId: companyId,
+			selectedPath: selectedPath,
+		},
+	});
 }
 
 export async function deleteDecisionFromCompany(
 	companyId: string,
-	decisionId: string
+	decisionId: string,
+	requestingUser: DecodedIdToken
 ) {
+	let company;
 	try {
-		await prisma.company.findUnique({
+		company = await prisma.company.findUnique({
 			where: {
 				id: companyId,
 			},
+			include: {
+				users: true,
+			},
 		});
+	} catch (e) {
+		throw new HttpException(404, "Company not found");
+	}
+
+	if (company.users.find(user => user.userId === requestingUser.uid)) {
+		throw new HttpException(403, "You are not allowed to view this company");
+	}
+
+	try {
 		await prisma.madeDecision.deleteMany({
 			where: {
 				companyId: companyId,
 				decisionId: decisionId,
 			},
 		});
-	} catch (e) {
-		if (e instanceof Prisma.PrismaClientKnownRequestError) {
-			if (e.code == "P2025") {
-				throw new HttpException(
-					404,
-					"No decision with this ID found in the specified company"
-				);
-			}
-		} else {
-			throw new HttpException(500, e.message);
-		}
-	}
+	} catch (e) {}
 }
