# packages/api/openapi.yaml
@@ -22,7 +22,7 @@ paths:
         - user
       summary: Get a user by id
       description: Returns a user with given id
-      operationId: findUserById
+      operationId: getUserById
       security:
         - firebaseAuth: []
       parameters:
@@ -49,7 +49,7 @@ paths:
         - company
       summary: Adds a new company to Venture Capitol
       description: Posts a company with given data
-      operationId: addCompany
+      operationId: createCompany
       security:
         - firebaseAuth: []
       requestBody:
@@ -70,41 +70,16 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  id:
-                    type: string
-                  legalForm:
-                    type: string
+                $ref: "#/components/schemas/Company"
         400:
           description: Invalid parameters.
       x-codegen-request-body-name: company
-    get:
-      tags:
-        - company
-      summary: Returns all companies from Venture Capitol
-      description: Returns all companies
-      operationId: findAllCompanies
-      security:
-        - firebaseAuth: []
-      responses:
-        200:
-          description: succesful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Company"
-        404:
-          description: No companies found.
   /company/{companyId}:
     get:
       tags:
         - company
       summary: Get a company by id
       description: Returns a company with given id
-      operationId: findCompanyById
       security:
         - firebaseAuth: []
       parameters:
@@ -121,16 +96,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Company"
-        400:
-          description: Invalid parameters.
-        404:
-          description: Company not found.
     delete:
       tags:
         - company
       summary: Delete a company by id
       description: Deletes a company with given id
-      operationId: deleteCompanyById
+      operationId: deleteCompany
       security:
         - firebaseAuth: []
       parameters:
@@ -142,17 +113,13 @@ paths:
       responses:
         200:
           description: successful operation.
-        400:
-          description: Invalid parameters.
-        404:
-          description: Company not found.
   /company/{companyId}/tasks:
     get:
       tags:
         - task
       summary: Get all tasks of a company
       description: Returns which tasks of a company are done
-      operationId: findAllTasksByCompanyId
+      operationId: getDoneTasks
       security:
         - firebaseAuth: []
       parameters:
@@ -170,10 +137,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: object
-                  properties:
-                    taskId:
-                      type: string
+                  $ref: "#/components/schemas/CompletedTask"
         400:
           description: Invalid status value
   /company/{companyId}/tasks/{taskId}:
@@ -182,9 +146,9 @@ paths:
         - task
       summary: Add a checked task to a company
       description: Adds a new finished task to a company
-      operationId: addTaskToCompany
       security:
         - firebaseAuth: []
+      operationId: markTaskDone
       parameters:
         - name: companyId
           in: path
@@ -210,7 +174,7 @@ paths:
         - task
       summary: Delete a task from a company
       description: Deletes a task from a company
-      operationId: deleteTaskFromCompany
+      operationId: undoTaskCompletion
       security:
         - firebaseAuth: []
       parameters:
@@ -229,19 +193,15 @@ paths:
       responses:
         200:
           description: successful deletion.
-        400:
-          description: Invalid parameters.
-        404:
-          description: Company or task not found.
   /company/{companyId}/decisions:
     get:
       tags:
         - decision
       summary: Get all decisions of a company
       description: Returns all decisions of a company
-      operationId: findAllDecisionsByCompanyId
       security:
         - firebaseAuth: []
+      operationId: getMadeDecisions
       parameters:
         - name: companyId
           in: path
@@ -257,24 +217,14 @@ paths:
               schema:
                 type: array
                 items:
-                  type: object
-                  properties:
-                    decisionId:
-                      type: string
-                    selectedPath:
-                      type: integer
-                      format: int32
-        400:
-          description: Invalid parameters.
-        404:
-          description: Company or decision not found.
+                  $ref: "#/components/schemas/MadeDecision"
   /company/{companyId}/decisions/{decisionId}:
     post:
       tags:
         - decision
       summary: Add a decision to a company
       description: Adds a new decision to a company
-      operationId: addDecisionToCompany
+      operationId: makeDecision
       security:
         - firebaseAuth: []
       parameters:
@@ -303,16 +253,12 @@ paths:
       responses:
         200:
           description: successful operation
-        400:
-          description: Invalid parameters.
-        404:
-          description: Company not found.
     delete:
       tags:
         - decision
       summary: Delete a decision from a company
       description: Deletes a decision from a company
-      operationId: deleteDecisionFromCompany
+      operationId: undoDecision
       security:
         - firebaseAuth: []
       parameters:
@@ -331,10 +277,6 @@ paths:
       responses:
         200:
           description: successful deletion
-        400:
-          description: Invalid parameters.
-        404:
-          description: Company or decision not found.
 components:
   securitySchemes:
     firebaseAuth:
@@ -360,10 +302,6 @@ components:
         - taskId
       type: object
       properties:
-        company:
-          $ref: "#/components/schemas/Company"
-        companyId:
-          type: string
         taskId:
           type: string
     MadeDecision:
@@ -375,11 +313,8 @@ components:
       properties:
         decisionId:
           type: string
-        companyId:
-          type: string
         selectedPath:
           type: integer
-          format: int32
     Company:
       type: object
       properties:
@@ -390,7 +325,8 @@ components:
         users:
           type: array
           items:
-            $ref: "#/components/schemas/User"
+            type: string
+            example: "aijd10-ihgjgfjd-aimlhmpbtm"
         legalForm:
           type: string
           enum:
@@ -400,11 +336,11 @@ components:
             - PARTG
             - UG
             - GMBH
-        completedTask:
-          type: array
-          items:
-            $ref: "#/components/schemas/CompletedTask"
-        madeDecision:
-          type: array
-          items:
-            $ref: "#/components/schemas/MadeDecision"
+        # completedTask:
+        #   type: array
+        #   items:
+        #     $ref: "#/components/schemas/CompletedTask"
+        # madeDecision:
+        #   type: array
+        #   items:
+        #     $ref: "#/components/schemas/MadeDecision"
